--- a/redflix45 project/InitializrSpringbootProject/src/main/java/co/g2m2e1/redflix45/views/JPanelSerieD.form
+++ b/redflix45 project/InitializrSpringbootProject/src/main/java/co/g2m2e1/redflix45/views/JPanelSerieD.form
@@ -36,7 +36,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       <Component id="jButtonGuardarS" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="51" max="32767" attributes="0"/>
+                      <EmptySpace pref="41" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jTextFieldNoTemp" max="32767" attributes="0"/>
                           <Component id="jButtonLimpiarCampos" max="32767" attributes="0"/>
@@ -97,7 +97,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonGuardarS">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Crear"/>
+        <Property name="text" type="java.lang.String" value="Eliminar"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonGuardarSActionPerformed"/>
