--- a/redflix45 project/InitializrSpringbootProject/src/main/java/co/g2m2e1/redflix45/views/UpdateFrame.form
+++ b/redflix45 project/InitializrSpringbootProject/src/main/java/co/g2m2e1/redflix45/views/UpdateFrame.form
@@ -34,7 +34,7 @@
           </Group>
           <Component id="jSeparator1" alignment="0" max="32767" attributes="0"/>
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="151" max="32767" attributes="0"/>
+              <EmptySpace pref="149" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="jComboBoxRead" alignment="2" min="-2" pref="130" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="2" min="-2" max="-2" attributes="0"/>
@@ -64,7 +64,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial Black" size="24" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Men&#xfa; Consultas"/>
+        <Property name="text" type="java.lang.String" value="Men&#xfa; Actualizar"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="jComboBoxRead">
